--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,30 +4,24 @@
     "es6": true,
     "jest": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["airbnb-base", "plugin:react/recommended"
-],
+  "extends": ["airbnb", "plugin:react/recommended"],
+  "plugins": ["react"],
   "rules": {
-    "react/jsx-uses-react": "error",   
-     "react/jsx-uses-vars": "error" ,
-      // suppress errors for missing 'import React' in files
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
-   // allow jsx syntax in js files (for next.js project)
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
-    "no-shadow": "off",
-    "no-param-reassign": "off",
-    "eol-last": "off",
-    "import/extensions": [ 1, {
-      "js": "always", "json": "always"
-    }]
+    "import/no-unresolved": "off",
+    "no-shadow": "off"
   },
   "ignorePatterns": [
     "dist/",
-    "build/",
-    "luxon.js"
+    "build/"
   ]
 }
