--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,18 @@
 
 {
   "presets": [
+      [
+          "@babel/preset-env",
+          {
+              "modules": "auto",
+              "useBuiltIns": "usage",
+              "corejs": 3
+          }
+      ],
       "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-syntax-jsx"]
+  "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-private-property-in-object"
+  ]
 }
