--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "big.js": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "web-vitals": "^1.0.1"
   },
