--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-test-renderer": "^17.0.2",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "16.12.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
